# VTP

./: LICENSE.txt  LISCENSE.txt  README.md  __init__.py  meta.yaml  pyproject.toml  setup.cfg  setup.py
VTP/: VTP_functions.py  __init__.py  functions.py
archive/: setup.py
core/: VTP_functions.py  vtp.py
scripts/: processing.py
src/: VTP_functions.py
src/VTP.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
vtp/: __init__.py
vtp/src/vtp.egg-info/: SOURCES.txt  requires.txt
vtp/vtp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
