[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VTP"
version = "1.0.0"
authors = [
    {name = Alexander Yoshizumi, email = "ajy@applieddataresearch.org"}
]
description = "The VTP package contains functions for processing vehicle telematics data and applying deterministic equations to characterize a vehicle's driving activity."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]
dependencies = ["datetime", "pandas", "numpy", "statistics", "sys", "os", glob"]

[project.urls]
Homepage = "https://github.com/ajyoshizumi/VTP"
Issues = "https://github.com/ajyoshizumi/VTP/issues"
