[metadata]
name = vtp
version = 1.0.0
author = Alexander Yoshizumi
author_email = ajy@applieddataresearch.org
description = Contains functions for processing vehicle telematics data and characterizing the driving activity of a vehicle.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
project_urls =
    repository = https://github.com/ajyoshizumi/VTP
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent

[options]
package_dir = 
    src
packages = find:
python_requires = >=3.7
zip_safe = no

[options.packages.find]
where = src